Fix arrow stretch

--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ h2 {
   color: lightgrey;
   opacity: .7;
   border: 2px solid lightgray;
-  padding: 12px;
+  padding: 12px 14px;
   border-radius: 50%;
   transition: all ease .3s;
 }
